python/greyml/_bindings.py


lib.ga_node_create.restype = c_node_ptr
lib.ga_node_create.argtypes = [c_char_p, c_int, c_int, c_int, c_int]

lib.ga_node_save_tensor.restype = None
lib.ga_node_save_tensor.argtypes = [c_node_ptr, c_int, c_tensor_ptr]

lib.ga_node_save_scalar.restype = None
lib.ga_node_save_scalar.argtypes = [c_node_ptr, c_int, c_float]

lib.ga_node_save_int.restype = None
lib.ga_node_save_int.argtypes = [c_node_ptr, c_int, c_int]

lib.ga_accumulate_grad.restype = None
lib.ga_accumulate_grad.argtypes = [c_tensor_ptr, c_tensor_ptr]

lib.ga_detach.restype = None
lib.ga_detach.argtypes = [c_tensor_ptr]

lib.ga_no_grad.restype = None
lib.ga_no_grad.argtypes = []

lib.ga_enable_grad.restype = None
lib.ga_enable_grad.argtypes = []

# =============================================================================
# Neural Network API (ga_nn.h)
# =============================================================================

# Linear layer
lib.ga_linear_create.restype = c_module_ptr
lib.ga_linear_create.argtypes = [c_int, c_int, c_bool]

lib.ga_linear_free.restype = None
lib.ga_linear_free.argtypes = [c_module_ptr]

lib.ga_linear_forward.restype = c_tensor_ptr
lib.ga_linear_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# Conv2D layer
lib.ga_conv2d_create.restype = c_module_ptr
lib.ga_conv2d_create.argtypes = [c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_bool]

lib.ga_conv2d_free.restype = None
lib.ga_conv2d_free.argtypes = [c_module_ptr]

lib.ga_conv2d_forward.restype = c_tensor_ptr
lib.ga_conv2d_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# BatchNorm2D layer
lib.ga_batchnorm2d_create.restype = c_module_ptr
lib.ga_batchnorm2d_create.argtypes = [c_int, c_float, c_float]

lib.ga_batchnorm2d_free.restype = None
lib.ga_batchnorm2d_free.argtypes = [c_module_ptr]

lib.ga_batchnorm2d_forward.restype = c_tensor_ptr
lib.ga_batchnorm2d_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# Dropout layer
lib.ga_dropout_create.restype = c_module_ptr
lib.ga_dropout_create.argtypes = [c_float]

lib.ga_dropout_free.restype = None
lib.ga_dropout_free.argtypes = [c_module_ptr]

lib.ga_dropout_forward.restype = c_tensor_ptr
lib.ga_dropout_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# Pooling layers
lib.ga_maxpool2d_create.restype = c_module_ptr
lib.ga_maxpool2d_create.argtypes = [c_int, c_int, c_int, c_int]

lib.ga_avgpool2d_create.restype = c_module_ptr
lib.ga_avgpool2d_create.argtypes = [c_int, c_int, c_int]

lib.ga_pool2d_free.restype = None
lib.ga_pool2d_free.argtypes = [c_module_ptr]

lib.ga_pool2d_forward.restype = c_tensor_ptr
lib.ga_pool2d_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# Embedding layer
lib.ga_embedding_create.restype = c_module_ptr
lib.ga_embedding_create.argtypes = [c_int, c_int]

lib.ga_embedding_free.restype = None
lib.ga_embedding_free.argtypes = [c_module_ptr]

lib.ga_embedding_forward.restype = c_tensor_ptr
lib.ga_embedding_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# RNN layer
lib.ga_rnn_create.restype = c_module_ptr
lib.ga_rnn_create.argtypes = [c_int, c_int]

lib.ga_rnn_free.restype = None
lib.ga_rnn_free.argtypes = [c_module_ptr]

lib.ga_rnn_forward.restype = c_tensor_ptr
lib.ga_rnn_forward.argtypes = [c_module_ptr, c_tensor_ptr, c_tensor_pp]

# Multi-head attention
lib.ga_mha_create.restype = c_module_ptr
lib.ga_mha_create.argtypes = [c_int, c_int]

lib.ga_mha_free.restype = None
lib.ga_mha_free.argtypes = [c_module_ptr]

lib.ga_mha_forward.restype = c_tensor_ptr
lib.ga_mha_forward.argtypes = [c_module_ptr, c_tensor_ptr, c_tensor_ptr, c_tensor_ptr, c_tensor_pp]

# Sequential container
lib.ga_sequential_create.restype = c_module_ptr
lib.ga_sequential_create.argtypes = [ctypes.POINTER(c_module_ptr), c_size_t]

lib.ga_sequential_free.restype = None
lib.ga_sequential_free.argtypes = [c_module_ptr]

lib.ga_sequential_forward.restype = c_tensor_ptr
lib.ga_sequential_forward.argtypes = [c_module_ptr, c_tensor_ptr]

# Weight initialization
lib.ga_init_uniform.restype = None
lib.ga_init_uniform.argtypes = [c_tensor_ptr, c_float, c_float]

lib.ga_init_normal.restype = None
lib.ga_init_normal.argtypes = [c_tensor_ptr, c_float, c_float]

lib.ga_init_xavier_uniform.restype = None
lib.ga_init_xavier_uniform.argtypes = [c_tensor_ptr]

lib.ga_init_kaiming_uniform.restype = None
lib.ga_init_kaiming_uniform.argtypes = [c_tensor_ptr]

# =============================================================================
# Random Number Generation API (ga_random.h)
# =============================================================================

lib.ga_random_seed.restype = None
lib.ga_random_seed.argtypes = [ctypes.c_uint64]

lib.ga_random_uint32.restype = ctypes.c_uint32
lib.ga_random_uint32.argtypes = []

lib.ga_random_float.restype = c_float
lib.ga_random_float.argtypes = []

lib.ga_random_normal.restype = c_float
lib.ga_random_normal.argtypes = []

lib.ga_random_shuffle.restype = None
lib.ga_random_shuffle.argtypes = [ctypes.POINTER(c_int), c_int]

lib.ga_tensor_rand_.restype = None
lib.ga_tensor_rand_.argtypes = [c_tensor_ptr]

lib.ga_tensor_randn_.restype = None
lib.ga_tensor_randn_.argtypes = [c_tensor_ptr]

# =============================================================================
# Module Exports
# =============================================================================

__all__ = [
    'lib',
    'c_tensor_ptr',
    'c_node_ptr',
    'c_module_ptr',
    'c_optim_ptr',
    'c_dtype',
    'c_bool',
    'c_int',
    'c_int64',
    'c_float',
    'c_void_p',
]
